--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "storybook": "^7.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
